<resources>
    <string name="app_name">Orzecznictwo SN</string>

    <string name="action_settings">Ustawienia</string>

    <string-array name="court_rooms_array">
        <item>Wszystkie</item>
        <item>Izba Cywilna</item>
        <item>Izba Karna</item>
        <item>Izba PUSiSP</item>
        <item>Izba Wojskowa</item>
        <item>Pełny skład</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Proszę zainstalować czytnik plików pdf.</string>
    <string name="open_pdf_file">Otwórz plik</string>
    <string name="downloading_judgement">Pobieram dokument..</string>
    <string name="judgements_folder">uzasadnienia</string>
    <string name="preference_name">JurisprudencePref</string>
    <string name="legal_declaration_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.
    </string>
    <string name="declaration_accepted">DECLARATION_ACCEPTED</string>
    <string name="action_about">O aplikacji</string>
    <string name="about_app">Aplikacja Orzecznictwo SN wysyła powiadomienia o nowych orzeczeniach Sądu Najwyższego.\n\nOrzeczenia można filtrować po poszczególnych izbach SN.\n\nAplikacja umożliwia przeglądanie postanowień, uchwał i uzasadnień wyroków po uprzednim
        ściągnięciu pliku PDF na telefon (jeśli plik PDF jest dostępny).\n\nW Ustawieniach aplikacji można włączyć/wyłączyć otrzymywanie powiadomień o nowych orzeczeniach.
    </string>
    <string name="contact_email">E-mail: kontakt.orzecznictwo.sn@gmail.com</string>
    <string name="contact_web">Internet: plumya.com</string>
    <string name="contact_string">Kontakt</string>
    <string name="no_internet_connection_msg">Sprawdź połączenie z internetem!</string>
    <string name="check_internet_connection">Proszę sprawdzić połączenie z internetem!</string>

</resources>
